# talentmap

./: .gitignore  CHANGELOG.md  README.md  embed_resume.py  main.py  package-lock.json  package.json  pyproject.toml  run-migration.bat
resume_template/: resume.css  resume.html
src/: index.css
src/components/: ATSScoreCircle.tsx  CandidateMatchingSystem.tsx  DashboardStats.tsx  JobExtractor.tsx  ResumeUpload.tsx  StudentCard.tsx  StudentSearch.tsx  StudentSidebar.tsx
src/components/ui/: button.tsx  card.tsx  tabs.tsx
src/hooks/: useSessionCandidates.ts  useStudentsSearch.ts
src/pages/: AdminDashboard.tsx  CreateSession.tsx  Index.tsx  Login.tsx  NewRegister.tsx  ProfilePage.tsx  Register.tsx  ResumeBuilder.tsx  ResumeScanner.tsx  SessionDetail.tsx  StudentDashboard.tsx  StudentDetails.tsx
supabase/migrations/: 20250128000001_add_resume_builder_data.sql  20250901000000_add_contact_fields.sql  20251007000000_create_resumes_table.sql  20251027000001_add_resume_form_data.sql
