[project]
name = "talentmap-connect-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "groq>=0.33.0",
    "httpx>=0.28.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "supabase>=2.22.2",
    "uvicorn>=0.38.0",
]
